포트폴리오

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 
                 <li>
                   <p class="tit">주소 :</p>
-                  <p>서울특별시 강남</p>
+                  <p>경상북도 안동시 용상동</p>
                 </li>
 
                 <li>
                   <p class="tit">휴대폰 :</p>
-                  <p>010 - 1111 - 1111</p>
+                  <p>010 - 7400 - 6064</p>
                 </li>
 
                 <li>
