--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <img src="./images/profile_img.jpg" alt="profile_img">
               </div>
               <div class="desc">
-                모든일에 최선을 다하며, 꿈과 열정이 가득한 프론트엔드 개발자입니다. 
+                모든일에 최선을 다하며, 꿈과 열정이 가득한 프론트엔드 개발자입니다.
               </div>
             </div>
 
@@ -499,7 +499,7 @@
 
                     <li>
                       <img src="./images/portfolio_ Icon/redux.png" alt="redux">
-                      Redux
+                      Redux-toolkit
                     </li>
 
                     <li>
@@ -553,11 +553,11 @@
                       <p>인트로페이지, 메인페이지</p>
 
                       <h3>주요 기능</h3>
-                      <p>gsap을 이용한 애니메이션</p>
+                      <p>gsap을 이용한 애니메이션, 숫자카운팅 애니메이션, 아코디언 탭메뉴</p>
                     </div>
 
                     <div class="go">
-                      <a href='#!' target="_blank">상세보기</a>
+                      <a href='https://github.com/Tae-Hyun98/genesis#readme' target="_blank">상세보기</a>
                       <a href="https://tae-hyun98.github.io/genesis/" target="_blank">Demo보기</a>
                     </div>
                   </div>
@@ -589,7 +589,12 @@
 
                     <li>
                       <img src="./images/portfolio_ Icon/gsap.png" alt="gsap">
-                      GSAP
+                      GSAP.js
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/swiper.png" alt="">
+                      Swiper.js
                     </li>
 
                   </ul>
@@ -604,10 +609,59 @@
                   </div>
 
                   <div class="description">
-                    <p>
-                      FILA
-                    </p>
+                    <div class="desc_text">
+                      <h2>EDIYA COFFEE</h2>
+                      <p>
+                        적응형웹인 이디야커피 스토어를 반응형웹으로 제작한 사이트입니다.
+                      </p>
+
+                      <h3>작업</h3>
+                      <p>
+                        개인 : 퍼블리싱 100%, 기능구현 100%
+                      </p>
+
+                      <h3>개발 기간</h3>
+                      <p>2023.03.28 ~ 2023.05.01</p>
+
+                      <h3>페이지 구성</h3>
+                      <p>메인페이지, 서브페이지(이벤트)</p>
+
+                      <h3>주요 기능</h3>
+                      <p>각 해상도별 미디어쿼리를 이용한 스타일적용, jQuery스크롤 이벤트</p>
+                    </div>
+
+                    <div class="go">
+                      <a href='https://github.com/Tae-Hyun98/EDIYA-Project#readme' target="_blank">상세보기</a>
+                      <a href="https://ediya-portfolio.netlify.app/" target="_blank">Demo보기</a>
+                    </div>
                   </div>
+                </div>
+
+                <div class="desc_skill">
+
+                  <h3>사용한 STACK</h3>
+                  <ul class="use_skill">
+                    <li>
+                      <img src="./images/portfolio_ Icon/html5.png " alt="html">
+                      HTML5
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/css3.png" alt="css">
+                      CSS3
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/jquery.png" alt="jquery">
+                      jQuery
+                    </li>
+
+                    <li>
+                      <img src="./images/portfolio_ Icon/slick.png" alt="slick">
+                      Slick
+                    </li>
+
+                  </ul>
                 </div>
               </li>
 
@@ -615,7 +669,7 @@
 
                 <div class="project_box">
                   <div class="project_img">
-                    <img src="./images/portfolio_tum.png" alt="">
+                    <img src="./images/portfolio_tum.png" alt="portfolio">
                   </div>
 
                   <div class="description">
@@ -635,11 +689,11 @@
                       <p>메인페이지</p>
 
                       <h3>주요 기능</h3>
-                      <p>필터기능, 상품검색기능, 리뷰/문의 기능, 로그인/회원가입 유효성체크 기능 </p>
+                      <p>...</p>
                     </div>
 
                     <div class="go">
-                      <a href="https://github.com/Tae-Hyun98/FILA-project#readme" target="_blank">상세보기</a>
+                      <a href="https://github.com/Tae-Hyun98/PortFolio#readme" target="_blank">상세보기</a>
                       <a href="https://portfolio-taehyun.netlify.app/" target="_blank">Demo보기</a>
                     </div>
                   </div>
