포트폴리오

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <div class="skill_text">
                   <p>
                     jQuery 문법을 숙지하고 있고, 화면제어를 위한 애니메이션과 기본 메소드들을 활용할 수 있습니다.
-                    jQuery 관련 라이브러리를 사용할 수 있습니다.
+                    jQuery 플러그인을 사용할 수 있습니다.
                   </p>
                 </div>
               </div>
