--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                 </div>
 
                 <div class="skill_text">
-                  <p>React프레임워크를 사용하여 Route를 이용하여 SPA를 구현할 수 있으며, 필요한 라이브러리들을 설치하여 import시켜 사용할수 있습니다.<br />
-                    전역적인 상태관리를 위해 redux toolkit을 사용할 수 있으며, 상태관리를 위한 useState를 사용할 수 있습니다.
+                  <p>React프레임워크를 사용하여 Route를 이용하여 SPA를 구현할 수 있으며, 필요한 라이브러리들을 설치하여 사용할수 있습니다.<br />
+                    redux toolkit을 사용하여 전역적인 상태관리를 할 수 있으며, 지역상태관리를 위한 useState를 사용할 수 있습니다.
                   </p>
                 </div>
               </div>
