--- a/index.html
+++ b/index.html
@@ -688,8 +688,6 @@
                       <h3>페이지 구성</h3>
                       <p>메인페이지</p>
 
-                      <h3>주요 기능</h3>
-                      <p>...</p>
                     </div>
 
                     <div class="go">
@@ -732,19 +730,6 @@
 
               </li>
 
-              <li class="swiper-slide">
-                <div class="project_box">
-                  <div class="project_img">
-                    <img src="./images/codemonkey.jpg" alt="">
-                  </div>
-
-                  <div class="description">
-                    <p>
-                      FILA
-                    </p>
-                  </div>
-                </div>
-              </li>
             </ul>
 
             <div class="swiper-button-prev button"></div>
@@ -766,7 +751,7 @@
 
             <li>
               <img src="./images/telephone-fill.svg" alt="">
-              <p><span>Phone :</span> 010 -1111 -2222</p>
+              <p><span>Phone :</span> 010 - 7400 - 6064</p>
             </li>
 
             <li>
