포트폴리오

--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@
 
                 <div class="skill_text">
                   <p>
-                    자바의 기본 문법을 이해하고 있으며,
+                    자바의 자료형 및 변수, 배열 등 기본 지식을 알고 있으며, 
+                    안드로이드스튜디오를 사용하여 자바언어로 앱을 만들어본 경험이 있습니다.
                   </p>
                 </div>
               </div>
